--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -58,7 +58,6 @@
 		<!-- <script type="text/javascript" src="bower_components/textAngular/dist/textAngular.min.js"></script> -->
 
 		<script type="text/javascript" src="bower_components/handsontable/dist/handsontable.full.min.js"></script>
-		<script type="text/javascript" src="bower_components/ngHandsontable/dist/ngHandsontable.min.js"></script>
 
 		<script type="text/javascript" src="js/app.js"></script>
 		<script type="text/javascript" src="js/controllers/project-shared.js"></script>
@@ -89,9 +88,26 @@
 		<script type="text/javascript" src="js/services/reporting.js"></script>
 		<script type="text/javascript" src="js/services/string.js"></script>
 		<script type="text/javascript" src="js/services/olap.js"></script>
+
+		<script type="text/javascript" src="js/launcher.js"></script>
 	</head>
 	<body>
 		<div ui-view></div>
+
+		<div id="load-container">
+			<div id="load-content">
+				<img src="/img/logo_color.svg">
+				
+				<div id="login_buttons" style="display: none">
+					<a href="/authentication/login" class="btn btn-primary btn-lg btn-block">Use MDM account</a>
+
+					<form class="form-inline" style="margin-top: 5px" action="/authentication/login-partner" method="POST">
+						<input type="text" class="form-control input-lg" name="username" placeholder="Username" style="width: 187px">
+						<input type="password" class="form-control input-lg" name="password" placeholder="Password" style="width: 187px">
+						<button class="btn btn-default btn-lg">Use partner account</button>
+					</form>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
-
