Fix using undefined variable in initial loader

--- a/client/dev/index-prod.html
+++ b/client/dev/index-prod.html
@@ -80,7 +80,7 @@
 			}
 
 			function onAppProgress(e) {
-				document.getElementById('progress').style.width = 100 * event.loaded / 1463944 + '%';
+				document.getElementById('progress').style.width = 100 * e.loaded / 1463944 + '%';
 			}
 
 			function onAppLoaded(e) {
