--- a/client/dev/index-prod.html
+++ b/client/dev/index-prod.html
@@ -9,6 +9,8 @@
 	<body>
 		<div ui-view></div>
 		
+		<div id="version">Version 2.3</div>
+
 		<div id="load-container">
 			<div id="load-content">
 				<img id="logo_img" src="/img/logo_color.svg">
@@ -118,8 +120,8 @@
 			function onAppLoaded(e) {
 				// Remove modal and change background color
 				document.body.style.backgroundColor = 'white';
-				var loader = document.getElementById('load-container');
-				loader.parentNode.removeChild(loader);
+				document.body.removeChild(document.getElementById('load-container'));
+				document.body.removeChild(document.getElementById('version'));
 
 				// append main script to document.
 				var s = document.createElement("script");
