- Country is now a separate field in project basics - Add drag & drop reorder capabilities to sites, users, data sources, variables, elements, partitions, partitions elements, logical frames, objectives, results and indicators. - Add arrows in menu, to highlight order when setting up a project (general > activities > objectives). - Lock save button to avoid double saving. - Rewrite projectId/indicatorId creation code to avoid double creation bug. - Warn user when server refuses to save. - Factorize save/reset template and code between all project pages. - Rename aggregation methods on data source creation - Make inputs printable (unfinished) - allow dots, underscore, dashes in email addresses

--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -54,6 +54,9 @@
 
 		<script type="text/javascript" src="bower_components/handsontable/dist/handsontable.full.min.js"></script>
 
+		<script type="text/javascript" src="bower_components/Sortable/Sortable.min.js"></script>
+		<script type="text/javascript" src="bower_components/Sortable/ng-sortable.js"></script>
+
 		<script type="text/javascript" src="js/polyfills/array.js"></script>
 		<script type="text/javascript" src="js/polyfills/math.js"></script>
 
