--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="bower_components/angular-ui-select/dist/select.min.css" />
 		<link rel="stylesheet" type="text/css" href="bower_components/bootstrap-css-only/css/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" href="bower_components/c3/c3.min.css" />
-		<link rel="stylesheet" type="text/css" href="bower_components/fontawesome/css/font-awesome.min.css" />
+		<link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.min.css" />
 		<link rel="stylesheet" type="text/css" href="bower_components/handsontable/dist/handsontable.full.css" />
 
 		<link rel="stylesheet" type="text/css" href="css/app.css" />
@@ -32,16 +32,15 @@
 		<script type="text/javascript" src="bower_components/moment/min/moment.min.js"></script>
 
 		<!-- PNG generation -->
-		<script type="text/javascript" src="bower_components/Blob.js/Blob.js"></script>
-		<script type="text/javascript" src="bower_components/canvas-toBlob.js/canvas-toBlob.js"></script>
-		<script type="text/javascript" src="bower_components/FileSaver.js/FileSaver.min.js"></script>
+		<script type="text/javascript" src="bower_components/blob/Blob.js"></script>
+		<script type="text/javascript" src="bower_components/canvas-to-Blob.js/canvas-toBlob.js"></script>
+		<script type="text/javascript" src="bower_components/file-saver/FileSaver.min.js"></script>
 
 		<!-- Angular -->
 		<script type="text/javascript" src="bower_components/angular/angular.js"></script>
+		<script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-		<script type="text/javascript" src="bower_components/angular-moment/angular-moment.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-ui-select/dist/select.min.js"></script>
-		<script type="text/javascript" src="bower_components/angular-bootstrap-show-errors/src/showErrors.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-cookies/angular-cookies.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-resource/angular-resource.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-translate/angular-translate.min.js"></script>
@@ -76,8 +75,6 @@
 		<script type="text/javascript" src="js/directives/_forms.js"></script>
 		<script type="text/javascript" src="js/directives/_acls.js"></script>
 		<script type="text/javascript" src="js/directives/project-logframe.js"></script>
-
-		<script type="text/javascript" src="js/ui-bootstrap-tpls.min.js"></script>
 
 		<script type="text/javascript" src="js/filters/indicator.js"></script>
 		<script type="text/javascript" src="js/filters/shared.js"></script>
