--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -51,8 +51,10 @@
 		<script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
 		<script type="text/javascript" src="bower_components/c3/c3.min.js"></script>
 
+		<!-- Excel -->
 		<script type="text/javascript" src="bower_components/handsontable/dist/handsontable.full.min.js"></script>
 
+		<!-- Sortable -->
 		<script type="text/javascript" src="bower_components/Sortable/Sortable.min.js"></script>
 		<script type="text/javascript" src="bower_components/Sortable/ng-sortable.js"></script>
 
@@ -98,7 +100,7 @@
 	<body>
 		<div ui-view></div>
 
-		<div id="version">Version 2.4</div>
+		<div id="version">Version 2.5</div>
 
 		<div id="load-container">
 			<div id="load-content">
