Move slot functions to new module

--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -92,6 +92,7 @@
 		<script type="text/javascript" src="js/services/statistics/olap.js"></script>
 		<script type="text/javascript" src="js/services/statistics/parser.js"></script>
 
+		<script type="text/javascript" src="js/services/utils/input-slots.js"></script>
 		<script type="text/javascript" src="js/services/utils/itertools.js"></script>
 		<script type="text/javascript" src="js/services/utils/string.js"></script>
 		<script type="text/javascript" src="js/services/utils/translate.js"></script>
