--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -28,16 +28,13 @@
 		<script type="text/javascript" src="i18n/es.js"></script>
 		<script type="text/javascript" src="i18n/en.js"></script>
 
-		<!-- Basic functionalities (dates, maths, fsm) -->
-		<script type="text/javascript" src="bower_components/moment/min/moment.min.js"></script>
-
 		<!-- PNG generation -->
 		<script type="text/javascript" src="bower_components/blob/Blob.js"></script>
 		<script type="text/javascript" src="bower_components/canvas-to-Blob.js/canvas-toBlob.js"></script>
 		<script type="text/javascript" src="bower_components/file-saver/FileSaver.min.js"></script>
 
 		<!-- Angular -->
-		<script type="text/javascript" src="bower_components/angular/angular.js"></script>
+		<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 		<script type="text/javascript" src="bower_components/angular-ui-select/dist/select.min.js"></script>
@@ -59,6 +56,7 @@
 		<script type="text/javascript" src="bower_components/Sortable/ng-sortable.js"></script>
 
 		<script type="text/javascript" src="js/polyfills/array.js"></script>
+		<script type="text/javascript" src="js/polyfills/date.js"></script>
 		<script type="text/javascript" src="js/polyfills/math.js"></script>
 
 		<script type="text/javascript" src="js/app.js"></script>
