--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -28,6 +28,10 @@
 		<script type="text/javascript" src="i18n/es.js"></script>
 		<script type="text/javascript" src="i18n/en.js"></script>
 
+		<!-- PDF generation -->
+		<script type="text/javascript" src="bower_components/pdfmake/build/pdfmake.min.js"></script>
+		<script type="text/javascript" src="bower_components/pdfmake/build/vfs_fonts.js"></script>
+
 		<!-- PNG generation -->
 		<script type="text/javascript" src="bower_components/blob/Blob.js"></script>
 		<script type="text/javascript" src="bower_components/canvas-to-Blob.js/canvas-toBlob.js"></script>
@@ -59,7 +63,6 @@
 		<script type="text/javascript" src="js/polyfills/date.js"></script>
 		<script type="text/javascript" src="js/polyfills/math.js"></script>
 
-		<script type="text/javascript" src="js/app.js"></script>
 		<script type="text/javascript" src="js/controllers/project-shared.js"></script>
 		<script type="text/javascript" src="js/controllers/project-structure.js"></script>
 		<script type="text/javascript" src="js/controllers/project-input.js"></script>
@@ -69,12 +72,12 @@
 		<script type="text/javascript" src="js/controllers/admin.js"></script>
 		<script type="text/javascript" src="js/controllers/helper.js"></script>
 
+		<script type="text/javascript" src="js/directives/pdf-export.js"></script>
 		<script type="text/javascript" src="js/directives/_shared.js"></script>
 		<script type="text/javascript" src="js/directives/indicator.js"></script>
 		<script type="text/javascript" src="js/directives/reporting.js"></script>
 		<script type="text/javascript" src="js/directives/_forms.js"></script>
 		<script type="text/javascript" src="js/directives/_acls.js"></script>
-		<script type="text/javascript" src="js/directives/project-logframe.js"></script>
 
 		<script type="text/javascript" src="js/filters/indicator.js"></script>
 		<script type="text/javascript" src="js/filters/shared.js"></script>
@@ -94,6 +97,8 @@
 		<script type="text/javascript" src="js/services/utils/string.js"></script>
 		<script type="text/javascript" src="js/services/utils/translate.js"></script>
 		<script type="text/javascript" src="js/services/utils/uuid.js"></script>
+		
+		<script type="text/javascript" src="js/app.js"></script>
 	</head>
 	<body>
 		<div ui-view></div>
