--- a/client/dev/index.html
+++ b/client/dev/index.html
@@ -74,12 +74,12 @@
 
 		<script type="text/javascript" src="js/directives/pdf-export.js"></script>
 		<script type="text/javascript" src="js/directives/_shared.js"></script>
-		<script type="text/javascript" src="js/directives/indicator.js"></script>
 		<script type="text/javascript" src="js/directives/reporting.js"></script>
-		<script type="text/javascript" src="js/directives/_forms.js"></script>
+		<script type="text/javascript" src="js/directives/form-controls.js"></script>
+		<script type="text/javascript" src="js/directives/form-helpers.js"></script>
+		<script type="text/javascript" src="js/directives/form-validators.js"></script>
 		<script type="text/javascript" src="js/directives/_acls.js"></script>
 
-		<script type="text/javascript" src="js/filters/indicator.js"></script>
 		<script type="text/javascript" src="js/filters/shared.js"></script>
 
 		<script type="text/javascript" src="js/services/models/indicator.js"></script>
@@ -99,6 +99,7 @@
 		<script type="text/javascript" src="js/services/utils/uuid.js"></script>
 		
 		<script type="text/javascript" src="js/app.js"></script>
+
 	</head>
 	<body>
 		<div ui-view></div>
