Fix issues in webpack

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,7 +5,6 @@
 
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<script type="text/javascript" src="monitool2-initscript.js"></script>
 	</head>
 
 	<body>
@@ -14,7 +13,7 @@
 		<div id="version">Version </div>
 		<div id="load-container">
 			<div id="load-content">
-				<img id="logo_img" src="/img/logo_color.svg">
+				<img id="logo_img" src="index_logo.svg">
 
 				<div id="login_buttons" style="display: none">
 
@@ -82,8 +81,5 @@
 				</div>
 			</div>
 		</div>
-		<script>
-			start();
-		</script>
 	</body>
 </html>
