--- a/frontend/src/pages/project/reporting/general/reporting.html
+++ b/frontend/src/pages/project/reporting/general/reporting.html
@@ -78,7 +78,7 @@
 	<div style="clear: both"></div>
 
 	<reporting-graph-adapter
-		type="['year', 'semester', 'quarter', 'month', 'month_week_sat', 'month_week_sun', 'month_week_mon', 'week_sat', 'week_sun', 'week_mon', 'day'].indexOf(groupBy) !== -1 ? 'line' : 'bar'"
+		type="['year', 'semester', 'quarter', 'month', 'month_week_sat', 'month_week_sun', 'month_week_mon', 'week_sat', 'week_sun', 'week_mon', 'day'].includes(groupBy) ? 'line' : 'bar'"
 		rows="rows" cols="cols" plots="plots">
 	</reporting-graph-adapter>
 
