--- a/frontend/src/pages/project/reporting/detailed/reporting-detailed.html
+++ b/frontend/src/pages/project/reporting/detailed/reporting-detailed.html
@@ -9,7 +9,7 @@
 
 	<div class="panel panel-default">
 		<div class="panel-heading" ng-click="selectionOpen=!selectionOpen" style="cursor: pointer" ng-init="selectionOpen=true">
-			<i fa-open="selectionOpen"></i> 
+			<i fa-open="selectionOpen"></i>
 			<span translate="project.data_selection"></span>
 		</div>
 		<div class="panel-body" ng-if="selectionOpen">
@@ -19,14 +19,11 @@
 					<div class="form-group">
 						<label for="element-input" class="col-sm-1 control-label" translate="project.variable"></label>
 						<div class="col-sm-11">
-							<div class="input-group">
-								<span class="input-group-addon"><i class="fa fa-tachometer fa-fw"></i></span>
-								<select id="element-input"
-										class="form-control input-sm"
-										ng-model="wrap.chosenElement"
-										ng-options="i as i.name group by i.group for i in elementOptions"></select>
-							</div>
-						</div>
+							<indicator-select
+								project="masterProject"
+								cc-indicators="indicators"
+								on-update="onChosenElementUpdate(element)"></indicator-select>
+ 						</div>
 					</div>
 				</div>
 			</div>
