--- a/frontend/src/pages/project/reporting/olap/olap.html
+++ b/frontend/src/pages/project/reporting/olap/olap.html
@@ -15,13 +15,10 @@
 			<div class="form-group">
 				<label for="variable-input" class="col-sm-1 control-label" translate="project.variable"></label>
 				<div class="col-sm-11">
-					<div class="input-group">
-						<span class="input-group-addon"><i class="fa fa-tachometer fa-fw"></i></span>
-
-						<select class="form-control input-sm"
-								ng-model="wrap.chosenElement"
-								ng-options="v as v.name group by v.group for v in elementOptions"></select>
-					</div>
+					<indicator-select
+						project="masterProject"
+						cc-indicators="indicators"
+						on-update="onChosenElementUpdate(element)"></indicator-select>
 				</div>
 			</div>
 
