--- a/frontend/src/pages/indicator/reporting/reporting.html
+++ b/frontend/src/pages/indicator/reporting/reporting.html
@@ -106,7 +106,7 @@
 	<tbody ng-repeat="(blockIndex, block) in blocks">
 		<tr ng-click="open[blockIndex] = !open[blockIndex]" style="cursor: pointer">
  			<th class="indent0" colspan="{{2 + cols.length}}">
-				<i class="noprint" fa-open="open[blockIndex]"></i>
+				<fa-open value="open[blockIndex]"></fa-open>
 				{{block.text}}
 			</th>
 		</tr>
