--- a/frontend/src/pages/project/structure/data-source/edit/collection-form-edition.html
+++ b/frontend/src/pages/project/structure/data-source/edit/collection-form-edition.html
@@ -120,7 +120,7 @@
 				</div>
 
 				<div class="panel-title">
-					<i fa-open="container.visibleElement==element.id"></i>
+					<fa-open value="container.visibleElement==element.id"></fa-open>
 					<strong>{{'project.variable'|translate}} {{index + 1}}:</strong> {{element.name}}
 				</div>
 			</div>
