--- a/frontend/src/pages/project/input/list/collection-input-list.html
+++ b/frontend/src/pages/project/input/list/collection-input-list.html
@@ -1,35 +1,35 @@
 <ol class="breadcrumb">
-	<li ng-if="::(userCtx.type == 'user')"><a ui-sref="main.projects" translate="shared.projects"></a></li>
-	<li class="active" title="{{masterProject.country}}" ng-bind="masterProject.country|maxLength:20"></li>
-	<li class="active" title="{{::masterProject.name}}" ng-bind="::masterProject.name|maxLength:50"></li>
-	<li class="active">{{::form.name|maxLength:50}}</li>
+	<li ng-if="::($root.userCtx.type == 'user')"><a ui-sref="main.projects" translate="shared.projects"></a></li>
+	<li class="active" title="{{::$ctrl.project.country}}" ng-bind="::$ctrl.project.country|maxLength:20"></li>
+	<li class="active" title="{{::$ctrl.project.name}}" ng-bind="::$ctrl.project.name|maxLength:50"></li>
+	<li class="active">{{::$ctrl.form.name|maxLength:50}}</li>
 </ol>
 
 <div class="alert alert-info" >
 
 	<div class="pull-right" style="text-align: right">
 		<a target="_blank"
-		   href="/resources/project/{{::masterProject._id}}/data-source/{{::form.id}}.pdf?orientation=portrait"
+		   href="/resources/project/{{::$ctrl.project._id}}/data-source/{{::$ctrl.form.id}}.pdf?orientation=portrait"
 		   class="btn btn-default pdf-export"
 		   style="margin-bottom: 5px; display: inline-block">
 			<i class="fa fa-file-pdf-o"></i>
 			<span translate="project.download_portrait"></span>
-		</a><br/><a target="_blank" href="/resources/project/{{::masterProject._id}}/data-source/{{form.id}}.pdf?orientation=landscape" class="btn btn-default pdf-export">
+		</a><br/><a target="_blank" href="/resources/project/{{::$ctrl.project._id}}/data-source/{{::$ctrl.form.id}}.pdf?orientation=landscape" class="btn btn-default pdf-export">
 			<i class="fa fa-file-pdf-o fa-rotate-270"></i>
 			<span translate="project.download_landscape"></span>
 		</a>
 	</div>
 
-	<span translate="project.input_list_info" translate-values="::{name: form.name}"></span>
+	<span translate="project.input_list_info" translate-values="::{name: $ctrl.form.name}"></span>
 </div>
 
 <legend>{{::form.name}}</legend>
 
-<div ng-if="!form.entities.length">
+<div ng-if="!$ctrl.form.entities.length">
 	<span translate="project.form_is_not_associated_with_site"></span>
 </div>
 
-<div id="input-list" ng-if="form.entities.length">
+<div id="input-list" ng-if="$ctrl.form.entities.length">
 
 	<div id="table1-container">
 		<table id="table1" class="table table-bordered table-stripped table-condensed">
@@ -42,10 +42,10 @@
 				<tr ng-show="hiddenStatus.length">
 					<td><div class="bodyField">&nbsp;</div></td>
 				</tr>
-				<tr ng-repeat="date in visibleStatus">
+				<tr ng-repeat="date in $ctrl.visibleStatus">
 					<td title="{{::date|formatSlotRange}}"><div class="bodyField">{{::date|formatSlot}}</div></td>
 				</tr>
-				<tr ng-hide="visibleStatus.length">
+				<tr ng-hide="$ctrl.visibleStatus.length">
 					<td><div class="bodyField">&nbsp;</div></td>
 				</tr>
 			</tbody>
@@ -53,7 +53,7 @@
 				<tr>
 					<th>
 						<div class="bodyField2">
-							<utc-datepicker ng-model="newInputDate.date"></utc-datepicker>
+							<utc-datepicker ng-model="$ctrl.newInputDate"></utc-datepicker>
 						</div>
 					</th>
 				</tr>
@@ -65,39 +65,39 @@
 		<table id="table2" class="table table-bordered table-stripped table-condensed">
 			<thead>
 				<tr>
-					<th ng-repeat="col in ::columns"><div class="headerField"><div>{{::col.name}}</div></div></th>
+					<th ng-repeat="col in ::$ctrl.columns"><div class="headerField"><div>{{::col.name}}</div></div></th>
 				</tr>
 			</thead>
 			<tbody>
-				<tr ng-show="hiddenStatus.length">
-					<td colspan="{{::columns.length}}">
+				<tr ng-show="$ctrl.hiddenStatus.length">
+					<td colspan="{{::$ctrl.columns.length}}">
 						<div class="bodyField">
-							<a ng-click="showMore()" translate="project.show_more_inputs"></a>
+							<a ng-click="$ctrl.showMore()" translate="project.show_more_inputs"></a>
 						</div>
 					</td>
 				</tr>
-				<tr ng-repeat="date in visibleStatus">
-					<td ng-repeat="col in ::columns">
+				<tr ng-repeat="date in $ctrl.visibleStatus">
+					<td ng-repeat="col in ::$ctrl.columns">
 						<div class="bodyField">
 							<a class="btn btn-xs"
-							   ng-class="::{'btn-default': inputsStatus[date][col.id] === 'done', 'btn-primary': inputsStatus[date][col.id] === 'expected', 'btn-danger': inputsStatus[date][col.id] === 'outofschedule'}"
+							   ng-class="::{'btn-default': $ctrl.inputsStatus[date][col.id] === 'done', 'btn-primary': $ctrl.inputsStatus[date][col.id] === 'expected', 'btn-danger': $ctrl.inputsStatus[date][col.id] === 'outofschedule'}"
 							   ui-sref="main.project.input.edit({period: date, entityId: col.id})"
-							   ng-if="::inputsStatus[date][col.id]"
-							   translate="{{::('project.input_status.' + inputsStatus[date][col.id])}}"></a>
+							   ng-if="::$ctrl.inputsStatus[date][col.id]"
+							   translate="{{::('project.input_status.' + $ctrl.inputsStatus[date][col.id])}}"></a>
 						</div>
 					</td>
 				</tr>
-				<tr ng-hide="visibleStatus.length">
-					<td colspan="{{::columns.length}}">
+				<tr ng-hide="$ctrl.visibleStatus.length">
+					<td colspan="{{::$ctrl.columns.length}}">
 						<div class="bodyField" translate="project.no_inputs"></div>
 					</td>
 				</tr>
 			</tbody>
 			<tfoot ng-if="displayFooter">
 				<tr>
-					<td ng-repeat="col in ::columns">
+					<td ng-repeat="col in ::$ctrl.columns">
 						<div class="bodyField2">
-							<a class="btn btn-xs btn-success" ng-click="addInput(col.id)" translate="project.input_status.expected-new"></a>
+							<a class="btn btn-xs btn-success" ng-click="$ctrl.addInput(col.id)" translate="project.input_status.expected-new"></a>
 						</div>
 					</td>
 				</tr>
