--- a/frontend/src/pages/admin/user-list/list.html
+++ b/frontend/src/pages/admin/user-list/list.html
@@ -6,7 +6,7 @@
 <div class="alert alert-info" translate="user.list_info"></div>
 
 <div>
-	<div class="panel panel-default indicator-panel" ng-repeat="user in users track by user._id">
+	<div class="panel panel-default indicator-panel" ng-repeat="user in $ctrl.users track by user._id">
 		<div class="panel-body">
 			{{user.name}}<br/>
 
@@ -14,7 +14,7 @@
 			<i class="fa fa-circle text-success" ng-if="user.role == 'project'"> <span translate="user.roles_short.project"></span></i>
 			<i class="fa fa-circle text-warning" ng-if="user.role == 'common'"> <span translate="user.roles_short.common"></span></i>
 
-			<a ng-click="edit(user)" class="btn btn-xxs btn-default" translate="shared.edit"></a>
+			<a ng-click="$ctrl.edit(user)" class="btn btn-xxs btn-default" translate="shared.edit"></a>
 		</div>
 	</div>
 </div>
